# foreman

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  publish.yml
docs/architecture/: control-plane.md  monorepo.md  worker-agent.md
integrations/slack/: README.md
scripts/: foreman.py  mcp_server.py  sleep_engineer.py  smoke_engineer.py  smoke_test.py
skills/delegate-with-foreman/: SKILL.md
tests/: test_cli.py  test_mcp_server.py  test_plugin_skill.py  test_smoke.py
